[tool.poetry]
name = "sweeper"
version = "0.1.0"
description = ""
authors = ["iantanwx <ian.tan@voyage.finance>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
playwright = "^1.43.0"
instructor = "1.2.4"
python-dotenv = "^1.0.1"
groq = "^0.5.0"
pydantic = "2.7.0"
openai = "^1.25.1"
asyncio = "^3.4.3"
aiohttp = "^3.9.5"
tiktoken = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.flake8]
extend-ignore = "E203, E266, E501, W503"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    ".eggs",
    "*.egg",
    "build",
    "dist"
]
